kubernetes-wiki/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-postgres-deployment
  namespace: wiki
  labels:
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: database
    app.kubernetes.io/version: v13.2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wiki
      app.kubernetes.io/instance: database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wiki
        app.kubernetes.io/instance: database
        app.kubernetes.io/version: v13.2
    spec:
      containers:
        - name: postgres
          image: postgres:13.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-storage-pvc
