kubernetes-wiki/wiki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-deployment
  namespace: wiki
  labels:
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: web
    app.kubernetes.io/version: v2.5
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wiki
      app.kubernetes.io/instance: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wiki
        app.kubernetes.io/instance: web
        app.kubernetes.io/version: v2.5
    spec:
      containers:
        - name: wiki-deployment
          image: requarks/wiki:2.5
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          volumeMounts:
            - mountPath: /wiki/backups
              name: wiki-backup
      volumes:
        - name: wiki-backup
          persistentVolumeClaim:
            claimName: wiki-backup-storage-pvc
