kubernetes-wiki/wiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-service
  namespace: wiki
spec:
  selector: 
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: web
  type: ClusterIP  
  ports:
    - port: 3000
      targetPort: 3000
