kubernetes-wiki/wiki-ingress.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wiki-ingress
  namespace: wiki
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`wiki.local`)
      kind: Rule
      services:
        - name: wiki-service
          port: 3000
